<resources>
    <string name="app_name">Value_Comparison</string>
    <string name="title">値の大小比較</string>
    <string name="start">スタート</string>
    <string name="setting">　設定　</string>
    <string name="quiz_title">3つの中で一番大きい数字を選んでください。</string>
    <string name="next">次の問題へ</string>
    <string name="to_start">スタートへ</string>
    <string name="correct">正解</string>
    <string name="incorrect">不正解</string>
    <string name="quiz_continue">続ける</string>
    <string name="to_result">結果画面へ</string>
    <string name="explain">の順に大きい</string>
    <string name="result">結果</string>
    <string name="return_button">戻る</string>
    <string name="all_delete">全削除</string>
    <string name="result_button">履歴</string>
    <string name="csv_export">CSV出力</string>

    <!-- AllDeleteDialog Message -->
    <string name="dialog_title">保存データの全削除</string>
    <string name="dialog_message">本当に今までの履歴を削除しますか？</string>
    <string name="dialog_positive">はい</string>
    <string name="dialog_negative">いいえ</string>

    <!-- CSVExportDialog Message -->
    <string name="export_title">CSVファイルの出力</string>
    <string name="export_message">履歴をCSVファイルとして出力しますか？</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>