<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:text="@string/title"
        android:gravity="center"
        app:layout_constraintWidth_default= "percent"
        app:layout_constraintWidth_percent= ".95"
        app:layout_constraintHeight_default= "percent"
        app:layout_constraintHeight_percent= ".1"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="InvalidId" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_square_cornercercle"
        android:text="@string/start"
        android:textStyle="bold"
        app:layout_constraintWidth_default= "percent"
        app:layout_constraintWidth_percent= ".95"
        app:layout_constraintHeight_default= "percent"
        app:layout_constraintHeight_percent= ".1"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_setting"

        />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_square_cornercercle"
        android:text="@string/setting"
        android:textStyle="bold"
        app:layout_constraintWidth_default= "percent"
        app:layout_constraintWidth_percent= ".95"
        app:layout_constraintHeight_default= "percent"
        app:layout_constraintHeight_percent= ".1"
        app:layout_constraintTop_toBottomOf="@id/button_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_result"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/button_square_cornercercle"
        android:text="@string/result_button"
        android:textStyle="bold"
        app:layout_constraintWidth_default= "percent"
        app:layout_constraintWidth_percent= ".95"
        app:layout_constraintHeight_default= "percent"
        app:layout_constraintHeight_percent= ".1"
        app:layout_constraintTop_toBottomOf="@id/button_setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>