<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".judge">

    <TextView
        android:id="@+id/judge_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/op"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/judge_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_quiz"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/op_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain"
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@id/op"
        app:layout_constraintBottom_toTopOf="@id/next_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"/>

    <Button
        android:id="@+id/next_quiz"
        android:layout_width="500sp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="80sp"
        android:onClick="onButton_quiz"
        app:layout_constraintTop_toBottomOf="@id/op_explain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/next_top" />

    <Button
        android:id="@+id/next_top"
        android:layout_width="500sp"
        android:layout_height="wrap_content"
        android:text="@string/to_result"
        android:textSize="80sp"
        android:onClick="onButton_result"
        app:layout_constraintTop_toBottomOf="@id/op_explain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/next_quiz"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>