<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="150sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="90sp"
        app:layout_constraintTop_toBottomOf="@id/result_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/percentage"
        app:layout_constraintBottom_toTopOf="@id/restart"/>

    <TextView
        android:id="@+id/percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="90sp"
        app:layout_constraintTop_toBottomOf="@id/result_title"
        app:layout_constraintStart_toEndOf="@id/details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/restart"/>

    <Button
        android:id="@+id/restart"
        android:layout_width="500sp"
        android:layout_height="wrap_content"
        android:text="@string/quiz_continue"
        android:textSize="80sp"
        android:onClick="onButton_continue"
        app:layout_constraintTop_toBottomOf="@id/details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/next_top" />

    <Button
        android:id="@+id/next_top"
        android:layout_width="500sp"
        android:layout_height="wrap_content"
        android:text="@string/to_start"
        android:textSize="80sp"
        android:onClick="onButton_main"
        app:layout_constraintTop_toBottomOf="@id/details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/restart"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>